Small Touch-ups to Olympia Drafts (#536)
* Update Precedent Links

Update Precedent Links

* Update Links

Update Links

* Add Child DAOs + Centralized Donations

+ Add Child DAOs for non-optional funding. Prevent proposal fatigue.
+ Clarifies centralized funding stakeholders benefit in Olympia

* Polish Contract Examples

+ Add Notes and Clarity
+ Fix Core-Geth Example

* Composable DeFi Feedback Loop

+ Incorporates Mercer's DeFi Feedback Loop concept.

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -95,19 +95,40 @@ The Olympia upgrade activates the following Ethereum protocol improvements on Et
 - The `basefee` is **redirected** (not burned) to a designated treasury address managed by the [Olympia Treasury contract (ECIP-1112)](https://ecips.ethereumclassic.org/ECIPs/ecip-1112).
 - The treasury contract is immutable, non-upgradable, and governed exclusively by on-chain proposals submitted and executed through [Olympia DAO (ECIP-1113)](https://ecips.ethereumclassic.org/ECIPs/ecip-1113).
 
-##### Example: Hardcoded BASEFEE Redirection (Solidity)
+##### Example: Hardcoded BASEFEE Redirection
 
-```solidity
-// Core-Geth basefee redirection logic (simplified pseudocode)
-address constant TREASURY = 0x4242...ecip1112; // Replace with final deployed treasury address
+```go
+// --- BEGIN PSEUDOCODE ---
+// This logic is implemented at the client level (e.g., Core-Geth) in Go.
+// It illustrates how EIP-1559's BASEFEE is redirected to the Olympia Treasury
+// instead of being burned (as on Ethereum mainnet).
 
-function finalizeBlock(...) internal {
+func finalizeBlock(block *Block, state *StateDB) error {
     ...
-    uint256 baseFeeAmount = block.basefee * gasUsed;
-    payable(TREASURY).transfer(baseFeeAmount); // Send to Olympia Treasury
+    // Calculate total BASEFEE from gas used in all transactions
+    baseFeeAmount := block.GasUsed * block.BaseFee
+
+    // Redirect BASEFEE to the fixed Olympia Treasury address
+    treasuryAddress := common.HexToAddress("0x4242...ecip1112") // Replace with deployed value
+    state.AddBalance(treasuryAddress, baseFeeAmount)
+
+    // Miner still receives priority fees (tips)
+    minerAddress := block.Coinbase
+    state.AddBalance(minerAddress, block.TotalPriorityFees())
+
     ...
+    return nil
 }
+// --- END PSEUDOCODE ---
 ```
+
+##### Pseudocode Notes
+
+- This is illustrative only — the real implementation resides in:
+  - [`miner/block.go`](https://github.com/ethereumclassic/core-geth/blob/master/eth/consensus/ethash/block.go)
+  - `core/state_transition.go`
+- `StateDB` is Core-Geth's execution ledger, used to apply balance changes during mining.
+- This logic is consensus-critical and must match across clients to preserve fork integrity.
 
 🔒 **Consensus-critical logic**: This redirection is enforced within the client’s block finalization process and **cannot be bypassed or altered** without a hard fork. The `BASEFEE` is transferred to the Olympia Treasury at the protocol level before miner rewards are issued.
 
@@ -268,8 +289,8 @@ This selective approach ensures Ethereum Classic remains compatible with the bro
 
 Although Ethereum Mainnet burns the `BASEFEE` as part of its monetary policy, several production EVM chains have chosen to **redirect base fee revenue to treasury contracts** for sustainable development:
 
-- **Ronin Network** (Axie Infinity) sends `BASEFEE` to a DAO-governed [Ronin Treasury](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
-- **Celo** redirects base fees to a DAO-controlled [Gas Fee Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
+- **Ronin Network** (Axie Infinity) sends `BASEFEE` to a DAO-governed [Ronin Treasury](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
+- **Celo** redirects base fees to a DAO-controlled [Gas Fee Handler](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
 - **Mantle**, **Polygon CDK**, and other modular L2 stacks implement treasury contracts that receive protocol revenue and route it via governance
 
 These examples demonstrate that **redirecting `BASEFEE` to a treasury** — rather than burning it — is a proven, incentive-aligned design used to fund core protocol work, infrastructure, and public goods.
