--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -134,7 +134,18 @@ contract OlympiaTreasury {
     /// @notice Fallback to accept incoming BASEFEE transfers
     receive() external payable {}
 
+    // --- BEGIN TREASURY RELEASE FUNCTION ---
     /// @notice Executes an approved proposal via hash-bound disbursement
+    /// @dev This function is called only by the authorized DAO executor contract
+    ///      after an on-chain vote and timelock delay have completed.
+    ///
+    /// This function ensures:
+    /// - Execution happens only once per proposalHash
+    /// - Funds are transferred only to valid recipients
+    /// - Emits a standardized event for auditability
+    ///
+    /// This function MUST NOT include any voting or validation logic.
+    /// It is a pure disbursement hook to preserve governance separation.
     /// @param proposalHash Unique hash derived off-chain from proposal metadata
     /// @param recipient Target address to receive funds
     /// @param amount Amount of ETC (in wei) to transfer
@@ -154,6 +165,7 @@ contract OlympiaTreasury {
 
         emit FundsReleased(proposalHash, recipient, amount);
     }
+    // --- END TREASURY RELEASE FUNCTION ---
 }
 ```
 
@@ -255,19 +267,19 @@ The Olympia Treasury design builds on proven patterns from other EVM-compatible 
 
 - **Ronin Network (Axie Infinity sidechain)**  
   Redirects EIP-1559 `BASEFEE` into a DAO-controlled treasury. Funds are used to support infrastructure, community grants, and long-term protocol maintenance.  
-  [View Contract](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
+  [View Contract](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
 
 - **Celo (Layer 1)**  
   Uses a `Gas Fee Handler` to redirect transaction fees toward climate initiatives and community development via a governance-controlled treasury.  
-  [View Handler](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
+  [View Govenance and Treasury Contracts](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
 
 - **Mantle (Layer 2)**  
   Implements fee redirection from its L2 sequencer to a treasury contract managed by MantleDAO. Revenue supports grants, infrastructure, and developer programs.  
-  [Read More](https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow)
+  [Read More](https://docs.mantle.xyz/network/system-information/fee-mechanism)
 
 - **Polygon CDK (Modular Rollup Framework)**  
   Supports modular DAOs and EIP-1559-compatible treasury redirection in sovereign rollups, allowing rollup creators to govern and fund protocol upgrades.  
-  [Polygon CDK Overview](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos)
+  [Polygon CDK Overview](https://docs.polygon.technology/)
 
 - **OP Stack (used by Base, Optimism)**  
   The OP Stack supports EIP-1559-style transactions and sequencer revenue splitting, but does not redirect `BASEFEE` to a DAO treasury. This provides a useful counterexample for evaluating the neutrality and sustainability of treasury design decisions across rollup architectures.
@@ -279,16 +291,16 @@ These implementations reflect a broader trend: **redirecting protocol revenue to
 For deeper implementation study and validation, below are verified contracts used by other EVM ecosystems:
 
 - **Ronin Treasury Contract**  
-  [`0x9f76...5217`](https://explorer.roninchain.com/address/0x9f76b782bdfba7a5e9eaa9b7b0f2c78b6596b217)
+  [`0x22ce...694e`](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
 
-- **Celo Gas Fee Handler**  
-  [`0x471E...8438`](https://explorer.celo.org/address/0x471EcE3750Da237f93B8E339c536989b8978a438)
+- **Celo Governance and Treasury Gas Fee Handler**  
+  [`0x471E...8438`](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
 
-- **Mantle Treasury Flow (Docs)**  
-  [https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow](https://docs.mantle.xyz/network/mantle-tokenomics/treasury-flow)
+- **Mantle Fee Mechanism**  
+  [https://docs.mantle.xyz/network/system-information/fee-mechanism](https://docs.mantle.xyz/network/system-information/fee-mechanism)
 
-- **Polygon CDK Modular Treasury (Overview)**  
-  [https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos](https://polygon.technology/blog/polygon-cdk-announces-native-support-for-eip-4844-and-modular-daos)
+- **Polygon CDK (Modular Rollup Framework)**  
+  [https://docs.polygon.technology/](https://docs.polygon.technology/)
 
 These implementations support the validity, neutrality, and resilience of redirecting protocol-layer fees to transparent, on-chain treasuries.
 
