--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -119,6 +119,53 @@ These practices ensure public accountability and reduce the risk of governance c
 
 A minimum of three multisig signers with distinct affiliations SHOULD be established at DAO launch, with additional signers onboarded gradually through community nomination and DAO approval. Signers SHALL be rotated periodically to mitigate long-term entrenchment. No signer SHALL possess unilateral authority or override privileges.
 
+### Child-DAO Modules for Critical Infrastructure
+
+To ensure continuous support for critical infrastructure — such as Core-Geth maintenance, Mordor Testnet, RPC nodes, and explorer services — Olympia DAO MAY establish **Child-DAO modules** with delegated authority and scoped budgets.
+
+These infrastructure-focused sub-DAOs enable public accountability, funding predictability, and specialization without compromising the integrity of main DAO governance.
+
+#### Examples of Child-DAOs
+
+- **Client DAO**  
+  - Maintains protocol clients (e.g., Core-Geth)  
+  - Reviews CVEs, performs upgrades, and ensures consensus compatibility  
+  - May include known contributors or rotating public stewards  
+  - Receives recurring budgets based on deliverables
+
+- **Infra DAO**  
+  - Manages public RPC endpoints, explorer tools, indexers, and DevOps support  
+  - Coordinates with the ecosystem to reduce fragmentation and maintain uptime  
+  - May fund third-party services, fallback infra, and monitoring tools
+
+- **Security DAO** *(Optional)*  
+  - Funds independent audits, formal verification, and testnet fuzzing  
+  - Grants bounty rewards for bug discovery and vulnerability disclosures
+
+#### Child-DAO Governance Parameters
+
+- Child-DAOs SHALL be deployed as modular contracts under the authority of the main DAO.
+- All disbursements from the Olympia Treasury MUST still pass through governance via structured ECFPs or scheduled approvals.
+- Each Child-DAO MAY:
+  - Propose a recurring budget
+  - Publish periodic expenditure reports
+  - Be subject to reauthorization, reduction, or sunset via main DAO vote
+
+#### Benefits of the Child-DAO Model
+
+- Ensures **non-optional infrastructure** (e.g., clients, RPCs) remains funded transparently
+- Encourages **long-term developer participation** with reduced political friction
+- Enables **specialized governance** for technically complex or recurring tasks
+- Preserves main DAO bandwidth by reducing proposal fatigue
+
+#### Accountability and Transparency
+
+- Child-DAOs MUST publish public dashboards or reports tied to deliverables.
+- Proposals MAY include specific KPIs or milestone-based disbursement.
+- All interactions between the Treasury and Child-DAOs MUST emit standardized events and maintain full on-chain auditability.
+
+This approach balances decentralization with practical sustainability, ensuring Ethereum Classic can retain high-quality contributors and resilient infrastructure over the long term.
+
 ### Rationale
 
 #### Modular, Future-Ready Governance
@@ -318,16 +365,22 @@ Voting MAY be implemented using one or more of the following mechanisms:
 
 The initial implementation SHALL avoid pre-minting any governance token. Any future token issuance MUST be approved via DAO vote and remain compliant with anti-premine principles.
 
+> The following code demonstrates voting mechanics using OpenZeppelin’s GovernorVotes standard.
+
 ```solidity
-// Example: Delegate voting power to another address
+// --- BEGIN VOTING EXAMPLE ---
+// This example uses OpenZeppelin’s GovernorVotes extension pattern.
+// It demonstrates delegated voting and snapshot-based vote retrieval.
+// https://docs.openzeppelin.com/contracts/4.x/governance#governor-votes
+
 function delegate(address delegatee) public {
     _delegate(msg.sender, delegatee);
 }
 
-// Snapshot block used to calculate voting weight
 function getVotes(address account, uint256 blockNumber) public view returns (uint256) {
     return _checkpoints[account].getAtBlock(blockNumber);
 }
+// --- END VOTING EXAMPLE ---
 ```
 
 #### 4. Proposal Metadata and Off-Chain Discussion
@@ -372,7 +425,17 @@ Treasury disbursements SHALL use deterministic proposal hashes for release valid
 The DAO queues and executes proposals after a voting delay. Execution is programmatic and non-discretionary, ensuring the treasury cannot be manipulated or diverted.
 
 ```solidity
-// On-chain: DAO timelock execution calling Treasury
+// --- BEGIN TIMELOCK EXECUTION EXAMPLE ---
+// This function represents the final on-chain execution step after DAO approval.
+// It is called by the Governor contract after the voting period and timelock delay.
+//
+// The function ensures:
+// - Only proposals that have been successfully queued can be executed.
+// - Disbursement occurs via the OlympiaTreasury contract, enforcing strict separation of concerns.
+//
+// This pattern is derived from OpenZeppelin GovernorTimelockControl:
+// https://docs.openzeppelin.com/contracts/4.x/api/governance#GovernorTimelockControl
+
 function executeECFP(
     bytes32 proposalHash,
     address recipient,
@@ -381,6 +444,7 @@ function executeECFP(
     require(_isQueuedProposal(proposalHash), "Not queued or invalid");
     OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
 }
+// --- END TIMELOCK EXECUTION EXAMPLE ---
 ```
 #### Proposal Hash Generation: Off-Chain Tooling
 
