--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -129,6 +129,28 @@ To maintain resilience and openness, the following mitigations MAY be enforced b
 - **Voting Model Upgradeability**  
   - The DAO MAY upgrade the voting system through governance, including adopting non-token-based models such as quadratic voting, identity-verified voting, or soulbound token schemes. These upgrades MUST follow the standard ECFP governance path.
 
+#### Child-DAO ECFPs for Infrastructure Spending
+
+To streamline recurring, non-optional funding (e.g., client maintenance, RPC services), the DAO MAY define **Child-DAO ECFP categories** with specialized workflows and delegated budgets.
+
+These subtypes support predictable and auditable funding streams for infrastructure-critical domains, such as:
+
+- **Client DAO** – Maintains protocol clients like Core-Geth
+- **Infra DAO** – Funds RPC nodes, explorers, monitoring, and deployment tooling
+- **Security DAO** – Handles audits, CVEs, bounty programs, and formal verification
+
+Each Child-DAO:
+- Submits ECFPs on a scheduled or recurring basis
+- Operates under scoped authority granted by main DAO votes
+- Publishes periodic progress and expenditure reports
+- May be sunset or reauthorized through ECFP proposals
+
+This structure ensures:
+- **Timely, depoliticized support** for critical services
+- **Public accountability** through transparent disbursement and reporting
+- **Reduced governance overhead** for non-controversial infrastructure tasks
+
+Child-DAO ECFPs MUST still follow the standard ECFP lifecycle (submission → voting → timelocked execution) and remain subject to community oversight and DAO quorum rules.
 
 #### Governance Scope
 
@@ -178,6 +200,48 @@ DAO tokenholders MAY reassign LLC roles or rotate signers via term-limited elect
   - Subject to community oversight
 
 **Informative Note**: As a best practice, the DAO MAY define a "Donation ECFP" format, enabling donors to align earmarked contributions with specific proposals. All such disbursements MUST pass through the standard governance process.
+
+#### Strategic Donors and Institutional Funders
+
+The ECFP framework also enables transparent and accountable participation by centralized or institutional donors, such as:
+
+- Centralized exchanges (CEXs)  
+- Mining pools and ASIC manufacturers  
+- Investment trusts and ETF managers (e.g., Grayscale, VanEck)  
+- Infrastructure sponsors (e.g., RPC, explorer, hosting providers)  
+- Web3 venture firms and protocol builders
+
+These stakeholders benefit from a healthy, stable Ethereum Classic network — and now have a formal mechanism to support it.
+
+Key features that make Olympia suitable for institutional participation:
+
+- ✅ **Legal execution**: The Ethereum Classic DAO LLC provides regulatory clarity, binding vote enforcement, and reporting.  
+- ✅ **Transparent governance**: All disbursements require on-chain DAO approval and are immutably recorded.  
+- ✅ **Auditable funding**: Every donation, proposal, and execution path is traceable and reproducible.  
+- ✅ **Optional alignment**: Donors may voluntarily submit or support “Donation ECFPs” to earmark funds for specific initiatives.  
+- ✅ **No privileged access**: All participants — large or small — must follow the same governance process.
+
+#### Protocol-Level Donors and Fee Forwarding (Composable DeFi Stack)
+
+In addition to off-chain donations, Olympia also enables EVM-native **protocol-level donations** from composable DeFi applications and foundational infrastructure deployed on Ethereum Classic. Protocols such as DEXs, lending markets, liquid staking, stablecoins, and token wrappers MAY opt to **hardcode a small percentage of transaction fees, yield, or protocol revenue** to be forwarded to the Olympia Treasury address.
+
+This creates a **sustainable feedback loop**:
+
+> More DeFi usage → more protocol volume → more fee-based donations → more funding for infrastructure → more users and applications
+
+This model mirrors successful funding practices seen in the broader EVM ecosystem (e.g., Lido, Balancer, Aura, RocketPool), where smart contracts forward protocol-level value to community-governed treasuries.
+
+By adopting this design on Ethereum Classic, Olympia encourages:
+
+- Composable, opt-in support from DeFi protocols  
+- Transparent, verifiable on-chain donation flows  
+- A self-reinforcing ecosystem of usage and development
+
+These contributions SHOULD be publicly disclosed and MAY use a standardized “Donation ECFP” format if alignment with a specific milestone, KPI, or proposal is desired. All funds, regardless of source, MUST pass through on-chain execution by Olympia DAO, ensuring neutrality and auditability.
+
+This structure welcomes support from centralized entities without compromising decentralization or fairness.
+
+Olympia provides the first compliant, on-chain, and permissionless path for long-term funders to contribute to Ethereum Classic infrastructure — ending reliance on opaque, off-chain arrangements.
 
 ### Rationale
 
@@ -253,7 +317,17 @@ The Ethereum Classic Funding Proposal (ECFP) process SHALL be implemented as an 
 Proposal metadata MUST be hashed and linked to content-addressed storage (e.g., IPFS or Arweave) using the following structure:
 
 ```solidity
-// On-chain: Store metadata CID and verify hash
+// --- BEGIN PROPOSAL SUBMISSION FUNCTION ---
+// This function is called by any address wishing to submit a funding proposal.
+// It records the proposal details and binds them to a unique hash derived from:
+// - proposal ID
+// - recipient address
+// - requested amount
+// - off-chain metadata content hash (IPFS/Arweave)
+// - chain ID (for replay protection)
+//
+// Proposals should be discussed off-chain and finalized before submission.
+// This contract does not validate deliverables or enforce proposal quality.
 function submitECFP(
     uint256 ecfpId,
     address recipient,
@@ -263,6 +337,7 @@ function submitECFP(
     bytes32 hash = keccak256(
         abi.encodePacked(ecfpId, recipient, amount, metadataCID, block.chainid)
     );
+
     proposals[ecfpId] = Proposal({
         id: ecfpId,
         recipient: recipient,
@@ -270,8 +345,10 @@ function submitECFP(
         metadataCID: metadataCID,
         hash: hash
     });
+
     emit ProposalSubmitted(ecfpId, recipient, amount, metadataCID, hash);
 }
+// --- END PROPOSAL SUBMISSION FUNCTION ---
 ```
 
 #### 2. On-Chain Registry and Governance
@@ -305,16 +382,27 @@ function submitECFP(
 - Each transaction MUST include the relevant ECFP ID and metadata hash to ensure auditability.
 
 ```solidity
-// Off-chain: Generate ECFP proposal hash for on-chain binding
-bytes32 proposalHash = keccak256(
-    abi.encodePacked(
-        ecfpId,        // Unique proposal ID (e.g., 0042)
-        recipient,     // Destination address
-        amount,        // Funding amount in wei
-        metadataCID,   // Content hash from IPFS or Arweave
-        block.chainid  // Replay protection domain separator
-    )
-);
+// --- BEGIN PROPOSAL EXECUTION FUNCTION ---
+// This function is called by the Olympia DAO executor after a successful on-chain vote.
+// It disburses funds from the Treasury by calling the `release()` function,
+// using a hash-bound payload that ensures:
+// - The recipient and amount match the proposal metadata
+// - The proposal passed governance vote and is approved
+// - The execution is recorded immutably on-chain
+//
+// This function MUST only be callable by the DAO executor.
+// It assumes prior validation has occurred through voting + timelock logic.
+
+function executeECFP(
+    uint256 ecfpId,
+    bytes32 proposalHash,
+    address recipient,
+    uint256 amount
+) external {
+    require(isApproved(ecfpId), "ECFP not approved");
+    OlympiaTreasury(treasuryAddress).release(proposalHash, recipient, amount);
+}
+// --- END PROPOSAL EXECUTION FUNCTION ---
 ```
 
 All disbursements MUST emit a standardized `ProposalExecuted` event for transparency, analytics, and auditability.
@@ -380,6 +468,8 @@ This example proposal hash serves as the unique identifier for execution. It lin
 
 ```solidity
 // Off-chain: Generate ECFP proposal hash for on-chain binding
+// This must match the exact structure used in submitECFP()
+// and be calculated prior to DAO voting for proposal integrity.
 bytes32 proposalHash = keccak256(
     abi.encodePacked(
         ecfpId,        // Unique proposal ID (e.g., 0042)
