--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -59,6 +59,13 @@ The DAO MUST implement the following core components:
 - **Voting Mechanism**:  
   All proposals SHALL undergo an on-chain vote. The initial implementation MAY support stake-based or hybrid voting models (e.g., staked ETC, veOLY, or quadratic schemes). No governance token SHALL exist at launch. Any token issuance MUST be proposed through the DAO and ratified via on-chain vote, with no premine or privileged allocation.
 
+- **Sybil Resistance and Identity Verification**:  
+  At launch, Olympia uses a one-address-one-vote model with no governance token. While simple and inclusive, this model is vulnerable to Sybil attacks due to the ease of generating Ethereum Classic addresses. To mitigate this, Olympia supports future enhancements that allow integrating Sybil-resistant identity systems.
+
+  Governance modules MAY implement optional verification layers such as BrightID, Gitcoin Passport, or Proof of Humanity to improve identity assurance and reduce the risk of vote manipulation. These integrations are permissionless, modular, and opt-in — enabling proposal authors or sub-DAOs to define eligibility rules based on external identity attestations.
+
+  The core protocol SHALL remain neutral and lightweight, deferring Sybil-resistance enforcement to the governance module and proposal level. This ensures flexibility while maintaining Olympia’s modular design and minimalism.
+
 - **Tokenless Governance at Launch**:  
   Olympia DAO launches without a governance token. All governance functions — including proposal submission, voting, and execution — are modular and do not assume token issuance. This design ensures upgrade paths remain open while avoiding centralized token capture at genesis. See [ECIP-1111](https://ecips.ethereumclassic.org/ECIPs/ecip-1111) and [ECIP-1112](https://ecips.ethereumclassic.org/ECIPs/ecip-1112) for supporting rationale.
 
