--- a/_specs/ecip-1114.md
+++ b/_specs/ecip-1114.md
@@ -71,9 +71,14 @@ The Ethereum Classic Funding Proposal (ECFP) process defines a standardized, on-
 
 3. **Voting and Quorum**
 
-   - Voting is conducted on-chain using token-weighted or delegated stake models.
-   - Each proposal MUST meet a configurable quorum (e.g., 5%) and approval threshold (e.g., ≥60% “Yes” votes).
-   - Voting delay and duration parameters SHALL be defined by DAO configuration.
+   - All ECFPs SHALL follow the Olympia DAO governance process defined in [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113).
+   - At launch, Olympia DAO operates **without a governance token**, using a one-address-one-vote model to maximize openness and participation.  
+     - This model is vulnerable to Sybil attacks; mitigation strategies (e.g., identity attestations, delegated voting, or reputation systems) MAY be proposed and adopted via future governance upgrades.
+   - The DAO MAY, by on-chain proposal and approval, upgrade to other voting models — including stake-based, delegated stake, quadratic, or hybrid systems — without modifying this ECIP.
+   - A **minimum quorum** MUST be enforced for any proposal to be valid.
+   - A **configurable approval threshold** (e.g., ≥60% “yes” votes) MUST be met for a proposal to pass.
+   - Voting delay and voting period parameters SHALL be defined by DAO configuration and MAY be modified through the standard governance process.
+   - All voting records, tallies, and results MUST be recorded on-chain and be publicly auditable.
 
 4. **Execution and Disbursement**
 
